--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </li>
               </ul>
             </div>
-            <div class="nav__contacts">
+            <div class="navigation__contacts">
               <ul class="contacts list">
                 <li class="contacts__item">
                   <a
@@ -119,8 +119,10 @@
     </header>
 
     <!-- Головна сторінка -->
+
     <main>
       <!-- Герой -->
+
       <section class="hero">
         <div class="overlay">
           <div class="hero__container container">
@@ -197,14 +199,6 @@
                           type="checkbox"
                         />
 
-                        <!-- <svg
-                          class="modal-form__checkbox-vector"
-                          width="16"
-                          height="15"
-                        >
-                          <use href="./images/icons.svg#icon-Vector"></use>
-                        </svg> -->
-
                         <span class="modal-form__heckbox-custom"></span>
 
                         <svg
@@ -233,7 +227,7 @@
         </div>
       </section>
 
-      <!-- Переваги -->
+      <!-- Секція переваги -->
 
       <section class="section">
         <div class="container advantages">
@@ -290,7 +284,8 @@
         </div>
       </section>
 
-      <!-- напрямки діяльності -->
+      <!-- Секція напрямки діяльності -->
+
       <section class="section section-directions">
         <div class="directions container">
           <h2 class="section__title">Чим ми займаємося</h2>
@@ -329,11 +324,11 @@
         </div>
       </section>
 
-      <!-- команда -->
+      <!-- Секція команда -->
 
       <section class="section">
         <div class="container team">
-          <h2 class="section__title section__title--distance">Наша команда</h2>
+          <h2 class="section__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__member">
               <picture>
@@ -699,13 +694,11 @@
         </div>
       </section>
 
-      <!-- постійні клієнти -->
+      <!-- Секція постійні клієнти -->
 
       <section class="clients section">
         <div class="container">
-          <h2 class="section__title section__title--distance">
-            Постійні клієнти
-          </h2>
+          <h2 class="section__title">Постійні клієнти</h2>
           <ul class="clients-list list">
             <li class="clients__item item">
               <a
@@ -792,85 +785,91 @@
     </main>
 
     <!-- footer -->
+
     <footer class="footer">
       <div class="footer-container container">
-        <div class="footer-address">
-          <a href="./index.html" class="logo logo__footer"
-            >Web<span class="logo__text logo__text--white">Studio</span></a
-          >
-          <span class="footer-coords">м. Київ, пр-т Лесі Українки, 26</span>
-          <ul class="footer-contacts__list list">
-            <li class="footer-contacts__item">
-              <a
-                class="footer-contacts__link link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-contacts__item">
-              <a class="footer-contacts__link link" href="tel:+38-096-111-11-11"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
+        <div class="footer-base">
+          <div class="footer-address">
+            <a href="./index.html" class="logo logo__footer"
+              >Web<span class="logo__text logo__text--white">Studio</span></a
+            >
+            <span class="footer-coords">м. Київ, пр-т Лесі Українки, 26</span>
+            <ul class="footer-contacts__list list">
+              <li class="footer-contacts__item">
+                <a
+                  class="footer-contacts__link link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-contacts__item">
+                <a
+                  class="footer-contacts__link link"
+                  href="tel:+38-096-111-11-11"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer-socials">
+            <b class="footer__title">приєднуйтесь</b>
+            <ul class="socials list">
+              <li class="socials__item">
+                <a
+                  class="socials__link socials__link--bottom link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="іконка instagram"
+                >
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__link socials__link--bottom link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="іконка twitter"
+                >
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__link socials__link--bottom link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="іконка Facebook"
+                >
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__link socials__link--bottom link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="іконка linkedin"
+                >
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="footer-socials">
-          <b class="footer__title">приєднуйтесь</b>
-          <ul class="socials list">
-            <li class="socials__item">
-              <a
-                class="socials__link socials__link--bottom link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="іконка instagram"
-              >
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__link socials__link--bottom link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="іконка twitter"
-              >
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__link socials__link--bottom link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="іконка Facebook"
-              >
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__link socials__link--bottom link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="іконка linkedin"
-              >
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+
         <form class="subscribe subscribe__footer">
           <b class="footer__title">Підпишіться на розсилку</b>
           <div class="subscribe__items">
