змінює button в header на span

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
           <a href="./index.html" class="logo"
             >Web<span class="logo__text logo__text--black">Studio</span></a
           >
-          <batton
-            type="button"
+          <span
+            role="button"
             class="menu-button"
             aria-expanded="false"
             aria-controls="menu-container"
@@ -46,7 +46,7 @@
                 href="./images/icons.svg#icon-menu_40px"
               ></use>
             </svg>
-          </batton>
+          </span>
 
           <div class="menu-container" id="menu-container" data-menu>
             <div class="navigation">
