--- a/index.html
+++ b/index.html
@@ -24,29 +24,6 @@
           <a href="./index.html" class="logo"
             >Web<span class="logo__text logo__text--black">Studio</span></a
           >
-          <batton
-            type="button"
-            class="menu-button"
-            aria-expanded="false"
-            aria-controls="menu-container"
-            data-menu-button
-          >
-            <svg
-              class="menu-icon"
-              width="40"
-              height="40"
-              aria-label="Перемикач мобільного меню"
-            >
-              <use
-                class="icon-cross"
-                href="./images/icons.svg#icon-close_40px"
-              ></use>
-              <use
-                class="icon-menu"
-                href="./images/icons.svg#icon-menu_40px"
-              ></use>
-            </svg>
-          </batton>
 
           <div class="menu-container" id="menu-container" data-menu>
             <div class="navigation">
@@ -116,6 +93,29 @@
           </div>
         </nav>
       </div>
+
+      <!-- batton mobile-menu -->
+
+      <span
+        role="button"
+        class="menu-button"
+        aria-expanded="false"
+        aria-controls="menu-container"
+        data-menu-button
+      >
+        <svg
+          class="menu-icon"
+          width="40"
+          height="40"
+          aria-label="Перемикач мобільного меню"
+        >
+          <use
+            class="icon-cross"
+            href="./images/icons.svg#icon-close_40px"
+          ></use>
+          <use class="icon-menu" href="./images/icons.svg#icon-menu_40px"></use>
+        </svg>
+      </span>
     </header>
 
     <!-- Головна сторінка -->
