--- a/index.html
+++ b/index.html
@@ -88,23 +88,6 @@
                   >
                 </li>
               </ul>
-
-              <!-- <div class="menu-socials">
-                <ul class="menu-socials__list list">
-                  <li class="menu-socials__item item">
-                    <a href="" class="link"></a>Instagram
-                  </li>
-                  <li class="menu-socials__item item">
-                    <a href="" class="link"></a>Twitter
-                  </li>
-                  <li class="menu-socials__item item">
-                    <a href="" class="link"></a>Facebook
-                  </li>
-                  <li class="menu-socials__item item">
-                    <a href="" class="link"></a>LinkedIn
-                  </li>
-                </ul>
-              </div> -->
             </div>
           </div>
         </nav>
@@ -286,6 +269,10 @@
             <li class="directions__item item">
               <img
                 class="directions__image"
+                srcset="
+                  ./images/directions/workplace-1.jpg    1x,
+                  ./images/directions/workplace-1@2x.jpg 2x
+                "
                 src="./images/directions/workplace-1.jpg"
                 alt="Фото відділу розробки"
                 width="370"
@@ -296,6 +283,10 @@
             <li class="directions__item item">
               <img
                 class="directions__image"
+                srcset="
+                  ./images/directions/workplace-2.jpg    1x,
+                  ./images/directions/workplace-2@2x.jpg 2x
+                "
                 src="./images/directions/workplace-2.jpg"
                 alt="Фото відділу оптимізації"
                 width="370"
@@ -306,6 +297,10 @@
             <li class="directions__item item">
               <img
                 class="directions__image"
+                srcset="
+                  ./images/directions/workplace-3.jpg    1x,
+                  ./images/directions/workplace-3@2x.jpg 2x
+                "
                 src="./images/directions/workplace-3.jpg"
                 alt="Фото відділу дизайну"
                 width="370"
@@ -319,7 +314,7 @@
 
       <!-- Секція команда -->
 
-      <section class="section">
+      <section class="section section-team">
         <div class="container team">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team__list list">
