--- a/portfolio.html
+++ b/portfolio.html
@@ -135,8 +135,8 @@
                     <source
                       media="(min-width: 768px)"
                       srcset="
-                        ./images/portfolio/portfolio-1_md.jpg    1x,
-                        ./images/portfolio/portfolio-1_md@2x.jpg 2x
+                        ./images/portfolio/portfolio-2_md.jpg    1x,
+                        ./images/portfolio/portfolio-2_md@2x.jpg 2x
                       "
                       type="image/jpg" />
                     <source
@@ -147,8 +147,8 @@
                       "
                       type="image/jpg" />
                     <img
-                      src="./images/portfolio/portfolio-1_sm.jpg"
-                      alt="Ігор Дем'яненко-Product Designer"
+                      src="./images/portfolio/portfolio-2_sm.jpg"
+                      alt="Веб-сайт Технокряк"
                       width="450"
                       height="294"
                       loading="lazy"
